# ijdr

./: DEPLOYMENT.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
ijdr-env/: pyvenv.cfg
journal-portal/: .firebaserc  .gitignore  CORS_PROXY_SOLUTION.md  CUSTOM_DOMAIN_SETUP.md  FIREBASE_PDF_SOLUTION.md  IMPROVEMENTS-ROADMAP.md  README.md  REPOSITORY_MIGRATION.md  SIMPLIFIED_JOURNAL_GUIDE.md  angular.json  cors.json  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json  package.json  storage.rules
journal-portal/.github/workflows/: deploy.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
journal-portal/functions/: package-lock.json  package.json
journal-portal/functions/lib/: index.js  index.js.map
journal-portal/functions/scripts/: setAdminClaim.js
journal-portal/functions/src/: index.ts
journal-portal/public/: robots.txt
journal-portal/scripts/: check-firebase-config.js
journal-portal/src/: index.html  styles.scss
journal-portal/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  route-seo.data.ts
journal-portal/src/app/components/about/: about.component.html  about.component.scss
journal-portal/src/app/components/admin/: admin.component.html  admin.component.scss  admin.component.ts
journal-portal/src/app/components/advisory-board/: advisory-board.component.html  advisory-board.component.scss  advisory-board.component.spec.ts  advisory-board.component.ts
journal-portal/src/app/components/board-member-modal/: board-member-modal.component.html  board-member-modal.component.scss  board-member-modal.component.ts
journal-portal/src/app/components/contact/: contact.component.html  contact.component.scss  contact.component.ts
journal-portal/src/app/components/contribute/: contribute.component.html  contribute.component.scss  contribute.component.ts
journal-portal/src/app/components/editorial-board/: editorial-board.component.html  editorial-board.component.scss  editorial-board.component.ts
journal-portal/src/app/components/home/: home.component.html  home.component.scss  home.component.ts
journal-portal/src/app/components/journal-detail/: journal-detail.component.html  (+2 more)
journal-portal/src/app/guards/: auth.guard.ts
journal-portal/src/app/services/: auth.service.ts  board-member-modal.service.ts  confirm-modal.service.ts  contact.service.ts  firebase-journal.service.ts  journal.service.spec.ts  journal.service.ts  pdf-modal.service.ts  toast.service.ts
journal-portal/src/app/type/: journals.type.ts
journal-portal/src/app/utils/: admin-setup.service.ts  journal-issue-tags.util.ts  public-pdf-url.util.ts
journal-portal/src/assets/: logo-config.ts
journal-portal/src/assets/images/: .gitkeep
journal-portal/src/environments/: environment.development.ts  environment.ts  firebase-config.ts
journal_backend/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
journal_backend/journal_backend/: schema.py  settings.py  settings_production.py  urls.py
journal_backend/journals/: admin.py  firebase_config.py  models.py  pdf-extractor  serializers.py  signals.py  urls.py  views.py
journal_backend/journals/migrations/: 0001_initial.py  0002_alter_journal_year.py  0002_journal_pdf_file_journal_uploaded_at.py  0003_alter_journal_year.py  0004_alter_journal_year.py  0005_alter_journal_year.py
nginx/: default.conf
(+43 files in other folders)
